Fix layout on mobile

--- a/index.css
+++ b/index.css
@@ -14,8 +14,8 @@ input[type=checkbox] {
 
 #container{
   height: 100%;
-  margin-left: 80px;
-  margin-right: 80px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
 
 #statsdiv{
